<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

   <View
       android:background="@drawable/ivy_privacy_space_bad_us"
       android:layout_width="match_parent"
       android:layout_height="24dp"/>


    <EditText
        android:id="@+id/email"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="41dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ivy_privacy_space_scan_result_rate_email"

        />

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ivy_privacy_space_scan_result_rate_bad_click"
        />

    <EditText
        android:id="@+id/content"
        android:layout_marginTop="17dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

   <TextView
       android:id="@+id/submit"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/ivy_privacy_space_question_button_submit"
       android:layout_gravity="right"
       android:layout_marginRight="20dp"
       android:textSize="14sp"
       android:textColor="#00897b"
       android:layout_marginTop="32dp"
       android:paddingBottom="16dp"
       />
</LinearLayout>
